# HES-Master

DeepShit/TP_01/: Dagier_Rod_TP_01.docx  load_mnist-stud.ipynb  load_mnist_light-stud.ipynb  perceptron_learning-stud.ipynb
DeepShit/TP_02/: MNIST_binary_classifier_stud.ipynb  numpy-tutorial-stud.ipynb  rapport.md
DeepShit/TP_03/: MNIST_softmax_classifier_stud.ipynb
DeepShit/TP_04/: function_approximation_stud.ipynb  overfitting_stud.ipynb  repport.md
DeepShit/TP_05/: backprop-stud.ipynb
DeepShit/TP_06/: backprop-ext-stud.ipynb  rapport.md
DeepShit/TP_07/: rapport.md  tensorflow-MLP-stud.ipynb
DeepShit/TP_08/: MNIST-MLP_from_raw_data_solution_keras.ipynb  confusion_matrix
DeepShit/TP_10/: CIFAR10-CNN_data_augmentation_stud.ipynb  rapport.md
DeepShit/TP_11/: ex1_cifar10.ipynb  ex2_transfer_learning_stud.ipynb  rapport.md
ML/TP_03/: ex3-review-questions-stud.ipynb
ML/TP_09/: 2_perceptron.ipynb  (+11 more)
aui-main/: README.md  app.py  chat.css  chat.js  index.html  marp_pres.md
cloud-deployment-main/: README.md
mse-dev-sec-ops-2324-main/: .gitignore  .gitlab-ci.yml  README.md
mse-dev-sec-ops-2324-main/src/: .coveragerc  .flake8  .gitleaks.toml  Dockerfile  README.md  app.py  fuzz_spec.yml  operators.py  pyproject.toml
mse-dev-sec-ops-2324-main/src/templates/: base.html  index.html  login.html
mse-dev-sec-ops-2324-main/src/tests/: conftest.py  test_api.py
pa-chatbot-main/: .flake8  .gitlab-ci.yml  Dockerfile  README.md  benchmarks.csv
rapport-pa-master/: Makefile  README.md  config.yaml  meta-vars.lua  my.bib
riverr-main/: README.md  pubspec.yaml
(+141 files in other folders)
